--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -7,3 +7,5 @@ authors = ["Steyr"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+url = "2.2.2"
+
