--- a/bot/Cargo.toml
+++ b/bot/Cargo.toml
@@ -1,10 +1,14 @@
 [package]
 name = "bot"
 version = "0.1.0"
-edition = "2018"
+edition = "2021"
 authors = ["Steyr"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 discord_lib = { path = "../lib" }
+# futures = "0.3.21"
+dotenv = "0.15.0"
+reqwest = { version = "0.11", features = ["json"] }
+tokio = { version = "1", features = ["full"] }
