--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -1,11 +1,12 @@
 [package]
 name = "discord_lib"
 version = "0.1.0"
-edition = "2018"
+edition = "2021"
 authors = ["Steyr"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 url = "2.2.2"
-
+reqwest = { version = "0.11", features = ["json"] }
+tokio = { version = "1", features = ["full"] }
