--- a/bot/Cargo.toml
+++ b/bot/Cargo.toml
@@ -15,4 +15,5 @@ serde_json = "1.0.79"
 log = "0.4.16"
 env_logger = "0.9.0"
 sys-info = "0.9.1"
-reqwest = "0.11.10"
+reqwest = {version = "0.11.10", features= ["json", "rustls-tls"]}
+chrono = "0.4.19"
