--- a/bot/Cargo.toml
+++ b/bot/Cargo.toml
@@ -7,7 +7,7 @@ authors = ["Steyr"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-serenity =  { version = "0.10.10", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache", "standard_framework"] }
+serenity =  { version = "0.11.1", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache", "standard_framework", "collector"] }
 tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
 dotenv = "0.15.0"
 serde = "1.0.136"
@@ -17,3 +17,4 @@ env_logger = "0.9.0"
 sys-info = "0.9.1"
 reqwest = {version = "0.11.10", features= ["json", "rustls-tls"]}
 chrono = "0.4.19"
+rand = "0.8.5"
